--- a/requirements.yml
+++ b/requirements.yml
@@ -1,15 +1,14 @@
 ---
 functional:
-  - Пользователь имеет возможность регистрации и авторизации на сайте используя свой e-mail, либо через свой аккаунт в GitHub иил Discord
-  - Пользователь может создавать игры разной тематики, уровня сложности, максимального времени игры и выбора соперника
-  - Пользователь может писать код для решения задачи на любом выбранном им языке и менять его в процессе игры
-  - Пользователь может видеть всех игроков, находящихся на сайте
-  - Пользователь может попробавть сыграть тестовую игру без регистрации, при этом игра и соперник выберутся системой
-  - Пользователь может просматривать таблицу рейтинга с достижениями игроков
-  - Пользователь имеет возможность просмотра любой уже оконченной игры
-  - Во время игры, пользователь имеет возможность общаться с соперником в чате их игры, сдаться или перезапустить игру сначала
-  - После прохождения игры пользователь может сыграть в матч-реванш или вернуться в основное меню игры
-  - Пользователь может просматривать и создавать новые задания для игры
+  - Пользователь должен иметь возможность регистрации и авторизации на сайте используя свой e-mail, либо через свой аккаунт в GitHub иил Discord
+  - Пользователь должен иметь возможность создавать игры разной тематики, уровня сложности, максимального времени игры и выбора соперника
+  - Пользователь должен иметь возможность писать код для решения задачи на любом выбранном им языке и менять его в процессе игры
+  - Пользователь должен иметь возможность видеть всех игроков, находящихся на сайте
+  - Пользователь должен иметь возможность сыграть тестовую игру без регистрации, при этом игра и соперник выберутся системой
+  - Пользователь должен иметь возможность просматривать таблицу рейтинга с достижениями игроков
+  - Пользователь должен иметь возможность возможность просмотра игры, которая завершилась
+  - Пользователь должен иметь возможность во время игры общаться с соперником в чате их игры, сдаться или перезапустить игру сначала
+  - Пользователь должен иметь возможность сыграть в матч-реванш или вернуться в основное меню игры, после прохождения игры
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
