--- a/test-cases.yml
+++ b/test-cases.yml
@@ -50,9 +50,23 @@
     - Нажать на кнопку "Create battle"
   expected-result: |
     Создается новая игра по указанным параметрам
+    
+ - summary: |
+    Проверка возможности изменения языка кода в процессе игры
+  requirement: |
+    Пользователь может менять язык решения кода в процессе игры
+  prerequisites:
+    Пользователь авторизован
+    Создана новая игра
+  test-data: |
+    Используемый язык = "Node.js 20.11.1"
+  steps:
+    - В окне заданного языка в выпадающем списке выбрать "Python 3.12.2"
+  expected-result: |
+    В форме написания кода язык изменился на выбранный
 
 - summary: |
-   Проверка возможности cоздания новой игры неавторизированным пользователем
+   Проверка возможности cоздания игры неавторизированным пользователем
   requirement: |
     При попытке создании новой игры неавторизированным пользователем, создается новая игра со случайной тематикой, уровнем сложности и соперником
   prerequisites:
@@ -64,18 +78,3 @@
     - Нажать на кнопку "Try simple battle"
   expected-result: |
     Cоздается новая игра со случайной тематикой, уровнем сложности и соперником
-
-- summary: |
-    Проверка входа пользователя с несуществующими логином и паролем
-  requirement: |
-    При неправильном логине или пароле пользователь должен получить сообщение об ошибке
-  prerequisites:
-    Открыта страница логина
-  test-data: |
-    Логин = Логин = hexlet Пароль = badpass
-  steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку «Войти»
-  expected-result: |
-    Пользователь должен получить сообщение об ошибке
